[project]
name = "treebuild"
version = "0.1.0"
description = "A CLI to design directory structures before they exist."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.13.1",
    "typer>=0.24.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-coverage>=0.0",
]

