[project]
name = "treebuild"
version = "0.1.0"
description = "A CLI to design directory structures before they exist."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.13.1",
    "typer>=0.24.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pass",
    "@abstractmethod"
]



[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-coverage>=0.0",
]

[project.scripts]
treebuild = "treebuild.cli.entrypoint:app"